# Rarmpage

./: apox.rar
rar-research/: .gitignore  Libro1.xlsx  README.md  debug_hash.py  debug_hashcat_unit.py  pyproject.toml  test_dummy.txt  test_hash.py
rar-research/docs/: crypto_pipeline.md  research_scope.md  threat_model.md
rar-research/src/GPU/: cpu_engine.py  download_dict.py  engine.py  extractor.py  installer.py  spanish.txt
rar-research/src/cipher/: aes256_rar_adapter.py  cipher_interface.py  tiny_aes.py
rar-research/src/cli/: main.py
rar-research/src/core/: crypto_profile.py  metadata.py  models.py  rar_parser.py
rar-research/src/crypto_engine/: crypto_context.py  execution_limits.py
rar-research/src/extraction/: payload_extractor.py
rar-research/src/kdf/: cost_estimator.py  pbkdf2_model.py
rar-research/src/kdf_engine/: kdf_interface.py  pbkdf2_adapter.py
rar-research/src/metrics/: execution_metrics.py  metrics_collector.py
rar-research/src/openRAR/: calc_combos.py  combinations_calculations.json  generate_json_combos.py  harksd.py  rar_opener.py
rar-research/src/orchestrator/: controlled_validation_strategy.py  execution_manager.py  orchestrator_interface.py  strategy_base.py
rar-research/src/reporting/: exporter.py  metrics.py
rar-research/src/simulation/: cpu_benchmark.py  gpu_placeholder.md
rar-research/tests/: test_cipher.py  test_crypto_engine_arch.py  test_execution_manager.py  test_kdf_engine.py  test_metadata.py  test_metrics.py  test_orchestrator_integration.py  test_pbkdf2_model.py  test_reporting.py  test_validation.py
(+5 files in other folders)
