[project]
name = "rar-research"
version = "0.1.0"
description = "Research project for RAR analysis"
authors = [
    {name = "AtomLogic", email = "info@atomlogic.io"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "rarfile>=4.0",
    "py7zr>=0.20.0",
]

[project.scripts]
rar-research = "src.cli.main:main"
